<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nom_voyage" />

    <EditText
        android:id="@+id/nom_voyage_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName" />



    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lieu" />

    <fragment
        android:id="@+id/place_autocomplete_fragment"
        android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewDateDepart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/date_depart" />

            <EditText
                android:id="@+id/editTextDateDepart"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewDateRetour"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/date_retour" />

            <EditText
                android:id="@+id/editTextDateRetour"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="5dp"
        android:background="@color/colorPrimary">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/a_faire" />
        <ListView
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <Button
            android:id="@+id/addToDo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Ajouter To-Do" />

    </LinearLayout>
    <Button
        android:id="@+id/addVoyage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ajouter"/>




</LinearLayout>